# ad-tensor

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  ]  xrst.toml
docs/: bib.xrst  dev.xrst  devel.xrst  private.xrst  public.xrst  user.xrst
examples/: CMakeLists.txt  ad.cpp  forward_par.cpp  forward_var.cpp  range.cpp  record.cpp  record_start.cpp  recording.cpp  start_recording.cpp
examples/ad/: ad.cpp  binary.cpp  recording.cpp
examples/adfn/: forward_dep.cpp  forward_der.cpp  forward_par.cpp  forward_var.cpp  get_range.cpp  get_started.cpp  range.cpp  reverse_der.cpp
examples/adten/: binary.cpp  recording.cpp
examples/atom/: ad_forward_der.cpp  ad_reverse_der.cpp  get_started.cpp
examples/chkpnt/: get_started.cpp
include/ad_tensor/: ad.hpp  ad_type.hpp  adfn.hpp  adten.hpp  atom.hpp  base_atom.hpp  chkpnt.hpp  op_enum.hpp  options.hpp  record.hpp  recording.hpp  sparsity.hpp  to_string.hpp  vector.hpp
include/ad_tensor/dev/: agraph.hpp  base_op.hpp  broadcast.hpp  call_op_depend.hpp  chkpnt.hpp  derive_op.hpp  get_option.hpp  move_swap.hpp  op_base.hpp  op_derive.hpp  op_enum.hpp  plus_minus_equal.hpp  rev_plus_equal.hpp  rev_sum_reshape.hpp  rev_sum_view.hpp  size_ptr2array_ref.hpp  tape.hpp  tensor_at_index.hpp  to_string.hpp  user_assert.hpp  vec_set.hpp  vec_sets.hpp
include/ad_tensor/devel/: ad_type.hpp  agraph.hpp  op_base.hpp  op_enum.hpp  tape.hpp
src/: CMakeLists.txt  ad.cpp  adfn.cpp  atom.cpp  base_atom.cpp  chkpnt.cpp  options.cpp  record.cpp  recording.cpp  sparsity.cpp  to_string.cpp
src/ad/: binary.cpp  ctor.cpp  minus.cpp  recording.cpp  sum.cpp  view.cpp
src/ad/dev/: binary.cpp  sum.cpp
src/adfn/: forward_dep.cpp  forward_der.cpp  forward_par.cpp  forward_var.cpp  get_range.cpp  range.cpp  reverse_der.cpp
src/adten/: binary.cpp  call_atom.cpp  call_chkpnt.cpp  ctor.cpp  matmul.cpp  minus.cpp  recording.cpp  solve.cpp  sum.cpp  transpose.cpp  view.cpp
src/dev/: ad.cpp  broadcast.cpp  chkpnt.cpp  get_option.cpp  rev_sum_reshape.cpp  rev_sum_view.cpp  size_ptr2array_ref.cpp  tape.cpp  tensor_at_index.cpp  to_string.cpp  vec_set.cpp  vec_sets.cpp
src/dev/base_op/: static.cpp
src/dev/derive_op/: add_op.cpp  call_op.cpp  call_result_op.cpp  div_op.cpp  dom_op.cpp  matmul_op.cpp  minus_op.cpp  mul_op.cpp  op_enum2derive_op.cpp  solve.cpp  solve_op.cpp  sub_op.cpp  sum_op.cpp  transpose_op.cpp  view_op.cpp
src/dev/op_derive/: add_op.cpp  div_op.cpp  dom_op.cpp  mul_op.cpp  op_enum2base_op.cpp  sub_op.cpp
src/devel/: ad.cpp  tape.cpp
tests/: CMakeLists.txt  ad.cpp  matmul_op.cpp  minus_op.cpp  op_enum.cpp  sum_op.cpp  view_op.cpp
tests/adfn/: reverse_der.cpp
tests/adten/: matmul_op.cpp  minus_op.cpp  solve_op.cpp  sum_op.cpp  transpose_op.cpp  view_op.cpp
tests/dev/: base_op.cpp  op_base.cpp  op_enum.cpp  tape.cpp  vec_set.cpp  vec_sets.cpp
tests/devel/: op_base.cpp  op_enum.cpp  tape.cpp  test_op.cpp
tools/: check_all.sh  check_copy.sh  check_gtest.sh  check_invisible.sh  check_sort.sh  check_tab.sh  check_version.sh  dev_settings.sh  git_commit.sh  grep_and_sed.sh  group_list.sh  new_file.sh  new_release.sh  run_cmake.sh  run_xrst.sh  sort.sh  tools_path.sh  torch_dir.py
